yew-function-components-macro/tests/functional_macro/bad-return-type-fail.stderr
error: function components must return `yew::Html`
 --> $DIR/bad-return-type-fail.rs:9:1
  |
9 | #[function_component(Comp1)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected one of `!`, `(`, `+`, `::`, `<`, `for`, `where`, or `{`, found `-`
  --> $DIR/bad-return-type-fail.rs:12:1
   |
12 | #[function_component(Comp)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
